service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-service
spec:
  type: ClusterIP
  selector:
    app: ollama
  ports:
    - port: 80
      targetPort: 11434
